I updated the githublink in the code leading to my github page

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -53,7 +53,7 @@
             <div class="container">
                 <p class="bold">
                     <a href="/api/friends">API Friends Link</a> |
-                    <a href="https://github.com/Zdubz7/FriendFinder" target="_blank">Zach Wiest GitHub Repository</a>
+                    <a href="https://github.com/Zdubz7/Friend-Finder" target="_blank">Zach Wiest GitHub Repository</a>
                 </p>
             </div>
         </footer>
